--- a/artifacthub-pkg.yml
+++ b/artifacthub-pkg.yml
@@ -17,11 +17,11 @@
 ---
 version: 0.1.0
 name: disallow-default-namespace
-displayName: LIKE NAME, BUT FANCIER
+displayName: disallow-default-namespace
 createdAt: '2022-07-19T16:39:10+02:00'
-description: DESCRIPTION OF YOUR POLICY
+description: Disallow usage of the default namespace
 license: Apache-2.0
-homeURL: https://author1.website
+homeURL: https://github.com/nlamirault/disallow-default-namespace
 containersImages:
 - name: policy
   image: "ghcr.io/kubewarden/policies/disallow-default-namespace:v0.1.0"
@@ -29,14 +29,14 @@ keywords:
 - this is freeform
 links:
 - name: policy
-  url: https://github.com/yourorg/disallow-default-namespace/releases/download/v0.1.0/policy.wasm
+  url: https://github.com/nlamirault/disallow-default-namespace/releases/download/v0.1.0/policy.wasm
 - name: source
-  url: POLICY HOMEPAGE URL
+  url: https://github.com/nlamirault/disallow-default-namespace
 provider:
   name: kubewarden
 recommendations:
 - url: https://artifacthub.io/packages/helm/kubewarden/kubewarden-controller
 annotations:
-  kubewarden/resources: Pod # comma separated list
+  kubewarden/resources: Pod, Deployment, StatefulSet, DaemonSet, CronJob, Job # comma separated list
   kubewarden/mutation: false
   kubewarden/contextAware: false
