Update artifact-pkg.yml file with kwctl based on the metadata.
Adds new makefile target to update the artifact-pkg.yml file using a
recent added command in the kwctl. This comment reads the content of the
metadata.yml file and generates the artifact-pkg.yml based on that.

Signed-off-by: José Guilherme Vanz <jguilhermevanz@suse.com>

--- a/metadata.yml
+++ b/metadata.yml
@@ -24,12 +24,10 @@ contextAware: false
 executionMode: kubewarden-wapc
 annotations:
   io.kubewarden.policy.title: disallow-default-namespace
-  io.kubewarden.policy.description: Short description
+  io.artifacthub.displayName: Disallow default namespace
+  io.kubewarden.policy.description: A Kubewarden policy to disallow usage of the default namespace
   io.kubewarden.policy.author: Nicolas Lamirault <nicolas.lamirault@gmail.com>
   io.kubewarden.policy.url: https://github.com/nlamirault/disallow-default-namespace
   io.kubewarden.policy.source: https://github.com/nlamirault/disallow-default-namespace
   io.kubewarden.policy.license: Apache-2.0
-  io.kubewarden.policy.usage: |
-    Long explaination.
-
-    **Note well:** this can be Markdown text
+  io.kubewarden.policy.ociUrl: ghcr.io/nlamirault/policies/disallow-default-namespace #FIXME this needs to be a valid OCI URL.
