--- a/artifacthub-pkg.yml
+++ b/artifacthub-pkg.yml
@@ -17,26 +17,39 @@
 ---
 version: 0.1.0
 name: disallow-default-namespace
-displayName: disallow-default-namespace
-createdAt: '2022-07-19T16:39:10+02:00'
-description: Disallow usage of the default namespace
+displayName: Disallow default namespace
+createdAt: 2023-03-28T18:17:00.677489234Z
+description: A Kubewarden policy to disallow usage of the default namespace
 license: Apache-2.0
 homeURL: https://github.com/nlamirault/disallow-default-namespace
 containersImages:
 - name: policy
-  image: "ghcr.io/kubewarden/policies/disallow-default-namespace:v0.1.0"
-keywords:
-- this is freeform
+  image: ghcr.io/nlamirault/policies/disallow-default-namespace:v0.1.0
 links:
 - name: policy
   url: https://github.com/nlamirault/disallow-default-namespace/releases/download/v0.1.0/policy.wasm
 - name: source
   url: https://github.com/nlamirault/disallow-default-namespace
+install: |
+  The policy can be obtained using [`kwctl`](https://github.com/kubewarden/kwctl):
+  ```console
+  kwctl pull ghcr.io/nlamirault/policies/disallow-default-namespace:v0.1.0
+  ```
+maintainers:
+- name: Nicolas Lamirault
+  email: nicolas.lamirault@gmail.com
 provider:
   name: kubewarden
 recommendations:
 - url: https://artifacthub.io/packages/helm/kubewarden/kubewarden-controller
 annotations:
-  kubewarden/resources: Pod, Deployment, StatefulSet, DaemonSet, CronJob, Job # comma separated list
-  kubewarden/mutation: false
-  kubewarden/contextAware: false
+  kubewarden/mutation: 'false'
+  kubewarden/rules: |
+    - apiGroups:
+      - ''
+      apiVersions:
+      - v1
+      resources:
+      - pods
+      operations:
+      - CREATE
